@@ -67,7 +67,7 @@ namespace game_config
 	
 	extern std::map<std::string, std::vector<Uint32> > team_rgb_colors;
 	namespace sounds {
-		extern const std::string turn_bell, receive_message, user_arrive, user_leave;
+		extern const std::string turn_bell, timer_bell, receive_message, user_arrive, user_leave;
 		extern const std::string button_press, checkbox_release, slider_adjust,
 			menu_expand, menu_contract, menu_select;
 	}
